--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   
     <!-- Main content container -->
     <div class="container">
-      <h1>Уровень безработицы снизился до 6,4% в 3 квартале, самый низкий показатель</h1>
+      <h1>Экономический рост замедлился на 3,2% во втором квартале 2024 года</h1>
       <img src="news-2444778_1280-1024x618.jpg" alt="Изображение новости" class="news-image" />
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum error
-        illo, tempore ipsam expedita saepe amet praesentium quaerat
-        reprehenderit facilis sit, assumenda voluptates asperiores, earum
-        dignissimos molestias aliquid voluptas alias.
+        По последним данным, экономический рост в стране замедлился на 3,2% по сравнению с предыдущим кварталом.
+        Эксперты связывают это с глобальными экономическими вызовами и внутренними трудностями.
+        Несмотря на это, правительство планирует внедрение мер, направленных на стимулирование экономики и поддержку малого и
+        среднего бизнеса.
       </p>
   
       <!-- Registration form -->
