--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Современные новости</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -26,15 +28,25 @@
 
   <!-- Main content container with image on the right -->
   <div class="container">
-    <h1>Экономический рост замедлился на 3,2% во втором квартале 2024 года</h1>
+    <h1>Килиан Мбаппе: звезда мирового футбола</h1>
     <div class="content-layout">
+      <div class="image-container">
+        <div class="social-icons">
+          <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+        </div>
+        <img src="mbappe-da-franca-em-jogo-contra-a-polonia-pela-eurocopa-2024-1719334294093_v2_450x450.jpg"
+          alt="Килиан Мбаппе" class="news-image" />
+      </div>
       <p>
-        По последним данным, экономический рост в стране замедлился на 3,2% по сравнению с предыдущим кварталом.
-        Эксперты связывают это с глобальными экономическими вызовами и внутренними трудностями.
-        Несмотря на это, правительство планирует внедрение мер, направленных на стимулирование экономики и поддержку
-        малого и среднего бизнеса.
+        Килиан Мбаппе — один из самых ярких и талантливых футболистов современности. Родившись во Франции,
+        он с юных лет демонстрировал уникальные футбольные способности и вскоре стал одним из ведущих игроков в мире.
+        Мбаппе, представляющий национальную сборную Франции, уже завоевал множество наград и стал чемпионом мира в 2018
+        году.
+        Его скорость, техника и точность делают его неотразимым на поле и кумиром для миллионов поклонников.
       </p>
-      <img src="news-2444778_1280-1024x618.jpg" alt="Изображение новости" class="news-image" />
     </div>
 
     <!-- Registration form -->
