--- a/index.html
+++ b/index.html
@@ -26,26 +26,29 @@
     </nav>
   </header>
 
-  <!-- Main content container with image on the right -->
+  <!-- Main content container with image and text -->
   <div class="container">
     <h1>Килиан Мбаппе: звезда мирового футбола</h1>
+    <div class="social-icons">
+      <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+    </div>
+
     <div class="content-layout">
       <div class="image-container">
-        <div class="social-icons">
-          <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
-        </div>
         <img src="mbappe-da-franca-em-jogo-contra-a-polonia-pela-eurocopa-2024-1719334294093_v2_450x450.jpg"
           alt="Килиан Мбаппе" class="news-image" />
+        <p class="image-caption">Мбаппе в действии во время одного из матчей.</p>
       </div>
       <p>
         Килиан Мбаппе — один из самых ярких и талантливых футболистов современности. Родившись во Франции,
         он с юных лет демонстрировал уникальные футбольные способности и вскоре стал одним из ведущих игроков в мире.
         Мбаппе, представляющий национальную сборную Франции, уже завоевал множество наград и стал чемпионом мира в 2018
-        году.
-        Его скорость, техника и точность делают его неотразимым на поле и кумиром для миллионов поклонников.
+        году. Его скорость, техника и точность делают его неотразимым на поле и кумиром для миллионов поклонников.
+        Мбаппе продолжает удивлять болельщиков и экспертов своими достижениями, подтверждая статус звезды мирового
+        уровня.
       </p>
     </div>
 
